cargo-features = ["edition2024"]

[package]
name = "shelly-screen"
version = "0.0.1"
author = "sergio stankevich, whysosergious on github"
edition = "2024"
description = "screen controlls, brightness, to start. mac not tested"
keywords = ["system","cli","brightness"]



[dependencies]
assert_cmd = "2.0.12"
brightness = "0.5.0"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.4"
execute = "0.2.13"
futures = "0.3.28"
predicates = "3.0.3"
tokio = { version =  "1.38.1", features = ["full"] }

# next: cargo add ffmpeg-screen-recorder
